--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -55,10 +55,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="@color/darkTextColor"
-                android:textSize="16sp"
                 android:layout_marginTop="@dimen/loginViewsMargin"
                 android:layout_marginStart="@dimen/loginViewsMargin"
                 android:layout_marginEnd="@dimen/loginViewsMargin"
+                android:layout_marginBottom="@dimen/loginViewsMargin"
+                android:text="@string/diagnostic_guide"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
