--- a/app/src/main/res/layout/fragment_diagnostics.xml
+++ b/app/src/main/res/layout/fragment_diagnostics.xml
@@ -221,7 +221,7 @@
         android:id="@+id/noData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No Data Found!"
+        android:text="@string/no_data_found"
         android:textColor="@color/darkTextColor"
         android:textStyle="bold"
         android:visibility="gone"
@@ -239,6 +239,7 @@
         android:hint="@string/enter_ip"
         android:inputType="text"
         android:maxLines="1"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/importData" />
@@ -251,6 +252,7 @@
         android:layout_marginEnd="20dp"
         android:hint="@string/bluetooth_mac_address_e_g_8c_6a_3b_05_46_e4"
         android:inputType="text"
+        android:visibility="gone"
         android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
