--- a/app/src/main/res/layout/activity_enter_otp.xml
+++ b/app/src/main/res/layout/activity_enter_otp.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".View.Activities.PasswordResetActivity"
+    tools:context=".View.Activities.EnterOtpActivity"
     android:background="@color/login_bk_color"
     android:focusableInTouchMode="true"
     android:gravity="center"
@@ -16,27 +16,27 @@
         android:layout_marginEnd="20dp"
         android:gravity="center"
         style="@style/viewParent.headerText.NoMode"
-        android:text="@string/enter_the_your_email_to_reset_your_password" />
+        android:text="@string/enter_the_one_time_password_otp_received" />
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputEmailForPassReset"
+        android:id="@+id/textInputOTPForPassReset"
         style="@style/parent"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="@dimen/loginViewsMargin">
 
         <EditText
-            android:id="@+id/editTextEmail"
+            android:id="@+id/editTextOTP"
             style="@style/modifiedEditText"
-            android:hint="@string/login_email_hint"
-            android:inputType="textEmailAddress"
+            android:hint="OTP"
+            android:inputType="text"
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/sendButton"
+        android:id="@+id/sendOTPButton"
         style="@style/loginButton"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/loginViewsMargin"
