--- a/app/src/main/res/layout/activity_reset.xml
+++ b/app/src/main/res/layout/activity_reset.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".View.Activities.PasswordResetActivity"
+    tools:context=".View.Activities.ResetActivity"
     android:background="@color/login_bk_color"
     android:focusableInTouchMode="true"
     android:gravity="center"
@@ -16,30 +16,45 @@
         android:layout_marginEnd="20dp"
         android:gravity="center"
         style="@style/viewParent.headerText.NoMode"
-        android:text="@string/enter_the_your_email_to_reset_your_password" />
+        android:text="@string/reset_your_password" />
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputEmailForPassReset"
+        android:id="@+id/textInputPassReset"
         style="@style/parent"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="@dimen/loginViewsMargin">
 
         <EditText
-            android:id="@+id/editTextEmail"
+            android:id="@+id/editTextPass"
             style="@style/modifiedEditText"
-            android:hint="@string/login_email_hint"
-            android:inputType="textEmailAddress"
+            android:hint="@string/new_password"
+            android:inputType="textPassword"
+            android:maxLines="1" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputConPassReset"
+        style="@style/parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="@dimen/loginViewsMargin">
+
+        <EditText
+            android:id="@+id/editTextConPass"
+            style="@style/modifiedEditText"
+            android:hint="@string/confirm_new_password"
+            android:inputType="textPassword"
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/sendButton"
+        android:id="@+id/sendPassButton"
         style="@style/loginButton"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/loginViewsMargin"
-        android:text="@string/send" />
+        android:text="@string/reset" />
 
 </LinearLayout>
